testsuite/tests/grammar/invalid_list/non-list-cls.lkt
grammar foo_grammar {
    num <- Num(@number)
    @main_rule main_rule <- list+ListNode(num)
}
